src/index.css
:root {
	--frame-color: #CCC;
	--hover-color: #DEF;
	--click-color: #FC8;
}

.text-side,
.graphic-side {
	position: fixed;
	height: 50%;
	width: 100%;
}
body.flipped .graphic-side,
body.flipped .text-side {
	height: 100%;
	width: 50%;
}
.text-side {
	top: 0;
	left: 0;
	z-index: 1; /* be above photo with blurry backdrop */
}
.graphic-side {
	bottom: 0;
	right: 0;
}
.text-side {
	display: flex;
	flex-direction: column;
}
.text-side .scrolling {
	overflow-y: scroll;
	flex-grow: 1;
}

time.listened {
	text-decoration: underline dotted 1px;
	color: #004;
	cursor: pointer;
}
a.listened {
	text-decoration-style: dotted;
	text-decoration-thickness: 1px;
}
a.listened.loading {
	cursor: progress;
}
a.listened.absent {
	text-decoration-color: #A00;
}
a.other-note.absent:active {
	cursor: not-allowed;
}

.panel {
	position: relative;
	padding: .5rem;
	border-top: solid 1px var(--frame-color);
	border-bottom: solid 1px var(--frame-color);
}
.panel + .panel {
	border-top: none;
}
.panel div {
	margin: .5rem 0;
}
.panel label.inline {
	white-space: nowrap;
}
.panel.fetch {
	padding: .5rem 3rem;
}
.panel.fetch button.reset,
.panel.fetch button.flip {
	position: absolute;
	top: .5rem;
	width: 2rem;
	height: 2rem;
	box-sizing: border-box;
	border: none;
}
.panel.fetch button.reset:hover,
.panel.fetch button.flip:hover {
	outline: auto;
}
.panel.fetch button.reset {
	right: .5rem;
	background: url("reset.svg");
}
.panel.fetch button.flip {
	left: .5rem;
	background: url("flip-ver.svg");
}
body.flipped .panel.fetch button.flip {
	background: url("flip-hor.svg");
}
.panel.command {
	--gap: 8px;  /* used in info tips */
	display: flex;
	flex-wrap: wrap;
	gap: var(--gap);
}
.panel.command div,
.panel.command details.tool {
	margin: 0;
	line-height: 1.4em;
}
.panel.command details.tool {
	outline: none;
}
@keyframes tool-ping-fade {
	from {
		outline-color: #9CF;
		outline-width: calc(var(--gap)/2);
	}
	to {
		outline-color: #FFF;
		outline-width: 0;
	}
}
.panel.command details.tool.ping {
	animation-name: tool-ping-fade;
	animation-duration: 1s;
	outline-style: solid;
}
.panel.command details.tool summary {
	display: inline;
}
.panel.command details.tool summary::before {
	content: '+';
	display: inline-block;
	width: 1em;
	height: 1em;
	line-height: 1em;
	text-align: center;
}
.panel.command details.tool summary:hover::before {
	background: yellow;
}
.panel.command details.tool[open] summary::before {
	content: '−';
}
.panel.command details.tool[open] summary::after {
	content: ':';
	width: 1ex;
	display: inline-block;
}
.panel.command details.tool button.info {
	--info-size: 20px;
	display: inline-block;
	position: relative;
	vertical-align: bottom;
	border: none;
	padding: 0;
	margin: 0;
	width: var(--info-size);
	height: var(--info-size);
	background: url("info.svg") no-repeat;
}
.panel.command details.tool button.info:not(.open) {
	cursor: help;
}
.panel.command details.tool button.info:hover {
	background: url("info-hover.svg") no-repeat, url("info.svg") no-repeat;
}
.panel.command details.tool button.info.open {
	margin-bottom: calc(-1px - var(--gap));
	height: calc(var(--info-size) + var(--gap) + 1px);
	background: url("info-tip.svg") no-repeat, url("info.svg") no-repeat;
}
.panel.command details.tool button.info.open:hover {
	background: url("info-tip.svg") no-repeat, url("info-close-hover.svg") no-repeat, url("info.svg") no-repeat;
}
.panel.command details.tool form {
	display: contents;
}
.panel.command details.info {
	width: calc(100% + 1rem);
	display: none;
	margin: 0 -.5rem;
	border-top: solid 1px #AAA;
	border-bottom: solid 1px #AAA;
	padding: 0 .5rem;
	background: #DDD;
}
.panel.command details.info p {
	margin: .5rem 0;
}
.panel.command details.info[open] {
	display: block;
}
.panel.command details.info summary {
	display: none;
}
.panel.command .icon {
	vertical-align: middle;
}
.panel.command button[disabled] .icon {
	opacity: .5;
}
.panel input:invalid:not(.no-invalid-indication),
.panel textarea:invalid:not(.no-invalid-indication) {
	border: solid 2px red;
	border-radius: 3px;
}
.panel .major-input input[type=text],
.panel .major-input textarea,
.panel .major-input button {
	display: block;
	box-sizing: border-box;
	width: 100%;
}
.panel .major-input textarea {
	resize: vertical;
}
.panel .major-input button {
	padding: .3rem;
}
.panel .text-button-input {
	position: relative;
}
.panel .text-button-input input[type=text] {
	display: block;
	box-sizing: border-box;
	width: calc(100% - 5rem);
}
.panel .text-button-input button {
	display: block;
	box-sizing: border-box;
	width: 4.5rem;
	position: absolute;
	bottom: 0;
	right: 0;
}
.panel button.error {
	color: red;
	box-shadow: 0px 0px 0px 1px red;
}
.panel fieldset {
	margin-left: 0;
	margin-right: 0;
}

.notes table {
	border-collapse: collapse;
	margin: 0 2px;
}
.notes tbody {
	box-shadow: -2px 0px 0px 0px red, 2px 0px 0px 0px red;
}
.notes tbody.hidden {
	display: none;
}
.notes tbody.closed {
	box-shadow: -2px 0px 0px 0px green, 2px 0px 0px 0px green;
}
.notes tbody.active-hover {
	background: var(--hover-color);
}
@keyframes active-click-fade {
	from { background: var(--click-color); }
	to { background: transparent; }
}
.notes tbody.active-click {
	animation-name: active-click-fade;
	animation-duration: 3s;
}
.notes td {
	vertical-align: top;
}
.notes td,
.notes th {
	padding: 2px;
}
.notes td.note-date {
	white-space: nowrap;
}
.notes td.note-user {
	white-space: nowrap;
	max-width: 20vw;
	text-overflow: ellipsis;
	overflow: hidden;
}
body.flipped .notes td.note-user {
	max-width: 10vw;
}
.notes td.note-user:empty::before {
	content: "anonymous";
	color: gray;
}
.notes td.note-action .icon {
	position: relative;
	display: inline-block;
	margin: 0;
	padding: 0;
	width: 16px;
	height: 16px;
	vertical-align: text-top;
	background: url("note-status.svg");
}
.notes td.note-action .icon.open {
	background: url("note-status-open.svg");
}
.notes td.note-action .icon.closed {
	background: url("note-status-closed.svg");
}
.notes td.note-comment {
	--comment-img-gap-size: 2px;
	--comment-link-outline: solid orange var(--comment-img-gap-size);
	white-space: pre-wrap;
	overflow-wrap: anywhere;
	width: 100%;
}
.notes td.note-comment:empty::before {
	content: "no comment";
	color: gray;
}
.notes td.note-comment a.image:hover,
.notes td.note-comment a.image.active {
	outline: var(--comment-link-outline)
}
.notes td.note-comment a.image.float {
	display: none;
	float: right;
	max-width: 25%;
	margin-left: var(--comment-img-gap-size);
	margin-bottom: var(--comment-img-gap-size);
}
.notes td.note-comment a.image.float img {
	display: block;
	max-width: 100%;
	max-height: 25vh;
}
.notes table.with-images td.note-comment a.image.float {
	display: block;
}

.more div {
	padding: 1em;
}
.more button {
	display: block;
	box-sizing: border-box;
	width: 100%;
	padding: .3rem;
}
.more .error {
	background: #FCC;
}
.more pre {
	margin: 1rem 0 0 0;
	padding: 1rem;
	background: #CCC;
	overflow-x: scroll;
}
.examples dd {
	margin: .5em 0 .5em 2em;
	padding: .5em;
	background: #EEE;
}
.examples code {
	white-space: pre-wrap;
}

.loose-parser-popup {
	--item-height: 20px;
	--item-width: 90px;
	display: none;
	position: fixed;
	z-index: 1;
	list-style: none;
	margin: 0;
	padding: 0;
	border: solid 1px var(--frame-color);
	font-size: .9em;
	opacity: .9;
}
.loose-parser-popup.open {
	display: block;
}
.loose-parser-popup a {
	display: flex;
	box-sizing: border-box;
	width: var(--item-width);
	height: var(--item-height);
	align-items: center;
	padding-left: 5px;
	background: #F8F8F8;
}
.loose-parser-popup li.main a {
	height: calc(2*var(--item-height));
	border-top: solid 1px var(--frame-color);
	border-bottom: solid 1px var(--frame-color);
	background: #FFF;
}
.loose-parser-popup a:link:hover {
	background: var(--hover-color);
}

.map {
	width: 100%;
	height: 100%;
	isolation: isolate;
}
.map .note-track {
	vector-effect: non-scaling-stroke;
}
.map .crosshair-overlay {
	position: absolute;
	z-index: 500;
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	pointer-events: none;
}
.map .crosshair-overlay .crosshair {
	height: 15px;
	width: 15px;
	background: url("crosshair.svg");
}
.map .osm-element-popup-contents {
	--block-gap: .5em;
}
.map .osm-element-popup-contents p,
.map .osm-element-popup-contents figure {
	margin: var(--block-gap) 0;
}
.map .osm-element-popup-contents figure figcaption {
	font-weight: bold;
}
.map .osm-element-popup-contents figure table {
	border: solid 1px var(--frame-color);
	border-spacing: 0;
	border-radius: .25rem;
	width: 100%;
}
.map .osm-element-popup-contents figure tr:not(:first-child) td {
	border-top: solid 1px var(--frame-color);
}
.map .osm-element-popup-contents figure tr td:first-child {
	background: #F8F8FF;
	border-right: solid 1px var(--frame-color);
}
.map .osm-element-popup-contents button {
	display: block;
	box-sizing: border-box;
	width: 100%;
	margin: var(--block-gap) 0;
}

dialog.figure {
	position: absolute;
	inset: 0;
	padding: 0;
	border: 0;
	width: 100%;
	height: 100%;
}
dialog.figure figure {
	width: 100%;
	height: 100%;
	overflow: hidden;
	margin: 0;
	padding: 0;
	cursor: zoom-in;
}
dialog.figure figure:not(.zoomed) {
	display: flex;
	align-items: center;
	justify-content: center;
}
dialog.figure figure.zoomed {
	overflow: scroll;
	cursor: zoom-out;
}
dialog.figure figure .backdrop {
	position: absolute;
	inset: 0;
	background-color: #888;
	background-size: cover;
	background-position: center;
	filter: saturate(.5) brightness(.8) blur(10px);
}
dialog.figure figure.zoomed .backdrop {
	display: none;
}
dialog.figure figure img {
	position: relative;
	display: block;
}
dialog.figure figure:not(.zoomed) img {
	max-width: 100%;
	max-height: 100%;
}
dialog.figure button { /* copypaste from reset button */
	--position-offset: 2rem;
	display: block;
	position: absolute;
	top: var(--position-offset);
	left: var(--position-offset);
	width: 2rem;
	height: 2rem;
	box-sizing: border-box;
	border: none;
	background: url("reset.svg");
	opacity: 0;
}
dialog.figure button.right-position {
	left: unset;
	right: var(--position-offset);
}
dialog.figure button.bottom-position {
	top: unset;
	bottom: var(--position-offset);
}
@keyframes photo-button-fade {
	from { opacity: 1; }
	to { opacity: 0; }
}
dialog.figure button.fading {
	animation-name: photo-button-fade;
	animation-duration: 3s;
}
dialog.figure button:hover,
dialog.figure button:focus {
	outline: auto;
	opacity: 1;
	animation: none;
}

